tests/parsing/smtlib/v2.7/errors/046_prop_lit_unclosed_1.smt2
(set-logic ALL)
(check-sat-assuming ((not p _)))
